feat: conesearch with list of coordinates
