# service/docs/swagger.json
@@ -12,6 +12,101 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
+        "/bulk-conesearch": {
+            "post": {
+                "description": "Search for objects in a given region using list of ra, dec and a single radius",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "conesearch"
+                ],
+                "summary": "Search for objects in a given region using multiple coordinates",
+                "parameters": [
+                    {
+                        "description": "Right ascension in degrees",
+                        "name": "ra",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "number"
+                            }
+                        }
+                    },
+                    {
+                        "description": "Declination in degrees",
+                        "name": "dec",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "number"
+                            }
+                        }
+                    },
+                    {
+                        "description": "Radius in degrees",
+                        "name": "radius",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "description": "Catalog to search in",
+                        "name": "catalog",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Number of neighbors to return",
+                        "name": "nneighbor",
+                        "in": "body",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/repository.Mastercat"
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/conesearch.ValidationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/conesearch": {
             "get": {
                 "description": "Search for objects in a given region using ra, dec and radius",
